# xcm_chain

./: .gitignore  Cargo.toml  README.md  build.rs
data/: 1.block
proto/: greeter.proto  token.proto  tran.proto
src/: lib.rs  main.rs
src/block_chain/: block.rs  chain.rs  func.rs  mod.rs  tx.rs  utxo.rs  utxos.rs
src/grpc/: grpc.rs  mod.rs
src/grpc/get_rpc/: create_address.rs  get_balance.rs  get_block.rs  mod.rs
src/grpc/token_rpc/: create_token.rs
src/grpc/tran_rpc/: mod.rs  tran.rs
