[package]
name = "xcm_chain"
version = "0.1.0"
authors = ["holdnosoul@gmail.com <holdnosoul@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha256 = "1.0.2"
chrono = "0.4"
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0"}
rand = "0.8.3"

#grpc
tonic = "0.4.2" # Rust gRPC implementation
prost = "0.7.0" # Rust Protocol Buffers implementation
prost-types = "0.7.0" # Contains definitions of Protocol Buffers well-known types
tokio = { version = "1.2", features = ["full"] }

futures = { version = "0.3", default-features = false, features = ["alloc"] }

lazy_static = "1.4.0"
once_cell = "1.7.2"

[build-dependencies]
tonic-build = "0.4.2"